--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -266,7 +266,7 @@
                   i18n>Formulare</span>
 
             <div class="float-md-right">
-                <form class="form-inline">
+                <div class="form-inline">
                     <div class="form-group mb-1 mb-lg-0 mr-1">
                         <select class="browser-default custom-select"
                                 (change)="formStatus = $event.target.value; updateForms(false)">
@@ -293,7 +293,7 @@
                                aria-label="Titel"
                                (change)="formTitle = $event.target.value; updateForms(false)">
                     </div>
-                </form>
+                </div>
             </div>
         </div>
 
