--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -1,5 +1,6 @@
 <div class="input-group p-1">
-    <input type="text"
+    <input #geosearch
+           type="text"
            class="form-control"
            placement="bottom"
            placeholder="Bitte Ort eingeben ..."
