reset geosearch input field after map reset

--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -1,6 +1,5 @@
 <div class="input-group p-1">
-    <input #geosearch
-           type="text"
+    <input type="text"
            class="form-control"
            placement="bottom"
            placeholder="Bitte Ort eingeben ..."
