--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0 m-0">
     <div class="row m-0">
         <div id="mapWrapper"
-             [class]="isCollapsed ? 'col-12 map-collapsed' : 'col-lg-6 map'">
+             [class]="isCollapsed ? 'col-12 map-collapsed' : 'col-lg-6 map map-lg'">
             <power-bodenrichtwertkarte #map
                                        [(isCollapsed)]="isCollapsed"
                                        [isExpanded]="isExpanded"
@@ -10,7 +10,7 @@
                                        [(stichtag)]="stichtag"
                                        [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
         </div>
-        <div [class]="isCollapsed ? 'col-12' : 'col-lg-6'">
+        <div [class]="isCollapsed ? 'col-12' : 'col-lg-6 height-lg'">
             <div class="row">
                 <div *ngIf="!adresse && !features"
                      class="text-center border-top col-12 p-0">
@@ -58,15 +58,15 @@
                          i18n-alt>
                 </button>
             </div>
-            <div class="row overflow-auto"
-                 [class]="isCollapsed ? '' : 'details'">
+            <div class="row overflow-auto overflow-auto-lg"
+                 [class]="isCollapsed ? '' : 'details details-lg'">
                 <div #collapse
                      id="collapseBasic"
                      class="p-0 col-12"
                      [collapse]="isCollapsed"
                      (expanded)="isExpanded = !isExpanded"
                      [isAnimated]="true">
-                    <div class="well well-lg card card-block card-header verlauf">
+                    <div class="well well-lg card card-block card-header verlauf verlauf-lg">
                         <div class="row p-0"
                              *ngIf="features">
                             <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen') && !features.features.length"
@@ -105,7 +105,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
