Fix style, env and IE11 compat

--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -101,3 +101,8 @@ td {
     height: 100% !important;
     min-height: 100% !important;
 }
+
+.custom-control-label::after,
+.custom-control-label::before {
+    top: 0.1rem;
+}
