--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -37,7 +37,8 @@
                             class="btn btn-collapse border col-12"
                             (click)="isCollapsed = !isCollapsed"
                             [attr.aria-expanded]="!isCollapsed"
-                            aria-controls="collapseBasic">Wählen Sie eine Position
+                            aria-controls="collapseBasic"
+                            i18n>Wählen Sie eine Position
                         <img src="{{ isCollapsed ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
                              width="25"
                              height="25"
