--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -9,13 +9,9 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    id="boris"
                    [routerLink]="['/bodenrichtwerte']"
-                   aria-labelledby="boris borisSub"
-                   aria-describedby="descriptionBoris"
                    i18n>BORIS.NI</a>
-                <h6 id="borisSub"
-                    i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
+                <h6 i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
-                   id="descriptionBoris"
                    i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen
                     stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land-
                     und Forstwirtschaft zur Verfügung.</p>
@@ -29,13 +25,9 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    id="nipix"
                    [routerLink]="['/immobilienpreisindex']"
-                   aria-labelledby="nipix nipixSub"
-                   aria-describedby="descriptionNipix"
                    i18n>NIPIX</a>
-                <h6 id="nipixSub"
-                    i18n>Niedersächsischer Immobilienpreisindex</h6>
+                <h6 i18n>Niedersächsischer Immobilienpreisindex</h6>
                 <p class="lead text-justify"
-                   id="descriptionNipix"
                    i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
                     Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
                     „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
@@ -55,10 +47,8 @@
             <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/forms']"
-                   aria-describedby="descriptionForm"
                    i18n>Online Formulare</a>
                 <p class="lead text-justify pt-3"
-                   id="descriptionForm"
                    i18n>Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden.
                     Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und
                     ausfüllen.</p>
