--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -474,4 +474,4 @@
     </div>
 </main>
 
-<power-forms-dashboard-newform #newform [tags]="tags" (out)="this.formSort = 'created'; this.formSortOrder = 'desc'; this.formSort = 'created';"></power-forms-dashboard-newform>
+<power-forms-dashboard-newform #newform [tags]="tags" (out)="this.formSort = 'created'; this.formSortOrder = 'desc'; this.formSort = 'created'; updateForms(false)"></power-forms-dashboard-newform>
