--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -35,8 +35,8 @@
                     <button class="btn btn-collapse border col-12"
                             (click)="isCollapsed = !isCollapsed"
                             [attr.aria-expanded]="!isCollapsed"
-                            aria-controls="collapseBasic"
-                            i18n>Wählen Sie eine Position
+                            aria-controls="collapseBasic">
+                        <span i18n>Wählen Sie eine Position</span>
                         <img src="{{ isCollapsed ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
                              width="25"
                              height="25"
@@ -72,7 +72,7 @@
                                 <p class="m-3 mx-center lead"
                                    i18n>Keine gültige Adresse!</p>
                                 <p class="m-3 mx-center lead"
-                                   i18n>Hinweis: </p>
+                                   i18n>Hinweis:</p>
                                 <p class="m-3 mx-center"
                                    i18n>Bitte wählen Sie eine gültige Adresse innerhalb
                                     von Niedersachsen aus. Die Genauigkeit des Suchradius für die Adresse beträgt 50
