Updated japanese language, added france language

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -152,17 +152,17 @@
                         i18n-aria-label
                         i18n>Sprache</h5>
                     <a href="{{ baseurl }}"
-                       id="de"
                        class="footer-link"
-                       aria-labelledby="languages de">Deutsch</a>
+                       aria-labelledby="languages">Deutsch</a>
                     - <a href="/en{{ baseurl }}"
-                       id="en"
                        class="footer-link"
-                       aria-labelledby="languages en">English</a>
+                       aria-labelledby="languages">English</a>
+                    - <a href="/fr{{ baseurl }}"
+                       class="footer-link"
+                       aria-labelledby="languages">Français</a>
                     - <a href="/ja{{ baseurl }}"
-                       id="ja"
                        class="footer-link"
-                       aria-labelledby="languages ja">日本語</a>
+                       aria-labelledby="languages">日本語</a>
                     <hr>
                     <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
