--- a/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
+++ b/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
@@ -12,6 +12,8 @@
                     i18n>Deutsch (Standard)</option>
             <option value="en"
                     i18n>Englisch</option>
+            <option value="fr"
+                    i18n>Französisch</option>
         </select>
     </div>
 
