--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -182,7 +182,7 @@
             <div class="row">
                 <div *ngIf="flurstueckSelection.size === 0"
                      class="text-center border-top col-12 p-0">
-                     <h5 class="m-3 mx-center"
+                    <h5 class="m-3 mx-center"
                         i18n>Wählen Sie Flurstücke auf der Karte aus</h5>
                 </div>
                 <div *ngIf="flurstueckSelection.size >= 1"
@@ -191,7 +191,8 @@
                             class="btn btn-collapse border col-12"
                             (click)="isCollapsed = !isCollapsed"
                             [attr.aria-expanded]="!isCollapsed"
-                            aria-controls="collapseBasic">Flurstücksauswahl
+                            aria-controls="collapseBasic">
+                        <span i18n>Flurstücksauswahl</span>
                         <img src="{{ isCollapsed ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
                              width="25"
                              height="25"
