--- a/power/src/app/shared/geosearch/geosearch.component.html
+++ b/power/src/app/shared/geosearch/geosearch.component.html
@@ -1,14 +1,30 @@
 <div class="input-group p-1">
-    <input type="text"
-           class="form-control"
-           placement="bottom"
-           placeholder="Bitte Ort eingeben ..."
-           i18n-placeholder
-           aria-label="Ort"
-           i18n-aria-label
-           [(ngModel)]="model"
-           [ngbTypeahead]="search"
-           [inputFormatter]="formatter"
-           [resultFormatter]="formatter"
-           (selectItem)="selectItem($event.item)">
+       <input [class]="isCollapsed ? 'd-none d-md-block' : 'd-none d-xl-block'"
+              type="text"
+              class="form-control"
+              placement="bottom"
+              placeholder="Bitte Ort eingeben large..."
+              i18n-placeholder
+              aria-label="Ort"
+              i18n-aria-label
+              [(ngModel)]="model"
+              [ngbTypeahead]="search"
+              [inputFormatter]="formatter"
+              [resultFormatter]="resultFormatterLarge"
+              [focusFirst]="false"
+              (selectItem)="onSelect($event)">
+       <input [class]="isCollapsed ? 'd-md-none' : 'd-xl-none'"
+              type="text"
+              class="form-control"
+              placement="bottom-left"
+              placeholder="Bitte Ort eingeben small..."
+              i18n-placeholder
+              aria-label="Ort"
+              i18n-aria-label
+              [(ngModel)]="model"
+              [ngbTypeahead]="search"
+              [inputFormatter]="formatter"
+              [resultFormatter]="resultFormatterSmall"
+              [focusFirst]="false"
+              (selectItem)="onSelect($event)">
 </div>
