--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -123,6 +123,7 @@
                 </div>
 
                 <power-geosearch [class.d-none]="!searchActive"
+                                 [(resetGeosearch)]="resetGeosearch"
                                  (selectResult)="flyTo($event)"></power-geosearch>
 
 
