--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -14,7 +14,8 @@
                             </div>
                             <div class="nav px-auto"
                                  style="position: relative;">
-                                <power-geosearch (selectResult)="flyTo($event)"></power-geosearch>
+                                <power-geosearch [(resetGeosearch)]="resetGeosearch"
+                                                 (selectResult)="flyTo($event)"></power-geosearch>
                             </div>
                             <div class="nav">
                                 <a class="nav-link"
