--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -1,4 +1,4 @@
-<power-modalmini #newformmodal>
+<power-modalmini #modal>
     <!-- title -->
     <div class="form-group">
         <label for="formtitle" i18n>Formular Titel *</label>
