--- a/power/src/app/shared/geosearch/geosearch.component.scss
+++ b/power/src/app/shared/geosearch/geosearch.component.scss
@@ -1,3 +1,15 @@
 :host {
     width: 100%;
 }
+
+.template {
+    width: 100vh;
+}
+
+.template-item-strasse {
+    font-size: small;
+}
+
+.template-item-haus {
+    font-size: small;
+}
