--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -46,6 +46,7 @@
                 <div class="nav px-auto"
                      style="position: relative;">
                     <power-geosearch [(resetGeosearch)]="resetGeosearch"
+                                     [isCollapsed]="isCollapsed"
                                      (selectResult)="onSearchSelect($event)"></power-geosearch>
                 </div>
                 <div class="nav">
@@ -148,8 +149,9 @@
 
     <power-geosearch [class.d-none]="!searchActive"
                      [(resetGeosearch)]="resetGeosearch"
+                     [isCollapsed]="isCollapsed"
                      (selectResult)="selectSearchResult($event)"></power-geosearch>
-                     
+
     <div [class.d-none]="!filterActive">
         <div class="btn-group d-flex w-100">
             <div class="btn-group"
