--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -15,6 +15,7 @@
                             <div class="nav px-auto"
                                  style="position: relative;">
                                 <power-geosearch [(resetGeosearch)]="resetGeosearch"
+                                                 [isCollapsed]="isCollapsed"
                                                  (selectResult)="flyTo($event)"></power-geosearch>
                             </div>
                             <div class="nav">
@@ -125,6 +126,7 @@
 
                 <power-geosearch [class.d-none]="!searchActive"
                                  [(resetGeosearch)]="resetGeosearch"
+                                 [isCollapsed]="isCollapsed"
                                  (selectResult)="flyTo($event)"></power-geosearch>
 
 
